--- a/gw/projects/audio_dac_test/CMakeLists.txt
+++ b/gw/projects/audio_dac_test/CMakeLists.txt
@@ -9,3 +9,9 @@ gw_project_rules(
     VERILATOR_LD_FLAGS 
         -lncurses        
 )
+
+#Add testcase. This one's a script, not just the Verilator Vmodel executable.
+add_test(NAME audio_dac_test
+    COMMAND ${CMAKE_CURRENT_LIST_DIR}/test/test.sh ${PROJECT_SOURCE_DIR}
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+)
