a reset controller for BoxLambda

--- a/gw/components/CMakeLists.txt
+++ b/gw/components/CMakeLists.txt
@@ -45,5 +45,7 @@ add_subdirectory(wb_gpio)
 add_subdirectory(litedram)
 add_subdirectory(ibex_wb_core)
 add_subdirectory(ibex)
+add_subdirectory(reset_ctrl)
+
 
 
