ym2149 and stsound test code

--- a/gw/components/ym2149/Bender.yml
+++ b/gw/components/ym2149/Bender.yml
@@ -15,15 +15,14 @@ sources:
     files:
      - ../../../sub/ym2149_psg_system/YM2149_PSG_system_wb.sv
      - ../../../sub/ym2149_psg_system/YM2149_PSG_system.sv
-    #  - ../../../sub/ym2149_psg_system/BHG_FP_clk_divider.v
-    #  - ../../../sub/ym2149_psg_system/BHG_jt49.v
-    #  - ../../../sub/ym2149_psg_system/BHG_audio_filter_mixer.sv
-    #  - ../../../sub/ym2149_psg_system/I2S_transmitter.sv
-    #  - ../../../sub/ym2149_psg_system/jt49_hdl/jt49_cen.v
-    #  - ../../../sub/ym2149_psg_system/jt49_hdl/jt49_div.v
-    #  - ../../../sub/ym2149_psg_system/jt49_hdl/jt49_noise.v
-    #  - ../../../sub/ym2149_psg_system/jt49_hdl/jt49_eg.v
-    #  - ../../../sub/ym2149_psg_system/BHG_jt49_exp.v
+     - ../../../sub/ym2149_psg_system/BHG_FP_clk_divider.v
+     - ../../../sub/ym2149_psg_system/BHG_jt49.v
+     - ../../../sub/ym2149_psg_system/BHG_audio_filter_mixer.sv
+     - ../../../sub/ym2149_psg_system/jt49_hdl/jt49_cen.v
+     - ../../../sub/ym2149_psg_system/jt49_hdl/jt49_div.v
+     - ../../../sub/ym2149_psg_system/jt49_hdl/jt49_noise.v
+     - ../../../sub/ym2149_psg_system/jt49_hdl/jt49_eg.v
+     - ../../../sub/ym2149_psg_system/BHG_jt49_exp.sv
 
 
 
