--- a/gw/projects/stsound_test/Bender.yml
+++ b/gw/projects/stsound_test/Bender.yml
@@ -17,6 +17,7 @@ dependencies:
   sdspi: { path: "../../components/sdspi" }
   ym2149: { path: "../../components/ym2149" }
   audio_dac: { path: "../../components/audio_dac" }
+  reset_ctrl: { path: "../../components/reset_ctrl" }
 
 sources:
   - target: constraints
