--- a/gw/projects/ym2149_dac_test/CMakeLists.txt
+++ b/gw/projects/ym2149_dac_test/CMakeLists.txt
@@ -15,3 +15,9 @@ gw_project_rules(
     VERILATOR_LD_FLAGS 
         -lncurses
 )
+
+#Add testcase. This one's a script, not just the Verilator Vmodel executable.
+add_test(NAME ym2149_dac_test
+    COMMAND ${CMAKE_CURRENT_LIST_DIR}/test/test.sh ${PROJECT_SOURCE_DIR}
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+)
