--- a/gw/projects/stsound_test/Bender.yml
+++ b/gw/projects/stsound_test/Bender.yml
@@ -1,5 +1,7 @@
 #See https://boxlambda.readthedocs.io/en/latest/build-system/#bender-targets for a list of used Bender targets.
 
+# Stsound_test reuses the ym2149_dac_test project gateware build, with different software.
+
 # Package metadata. Required.
 package:
   # The name of the package. Required.
@@ -40,7 +42,6 @@ sources:
       NO_MODPORT_EXPRESSIONS: ~
       DEBUG_MODULE_ACTIVE: ~
       YM2149: ~
-      USE_DUAL_PSG: ~
       SDSPI: ~
       #DRAM: ~
       #VERA: ~      
