unit testing praxos component WIP

--- a/gw/components/CMakeLists.txt
+++ b/gw/components/CMakeLists.txt
@@ -46,6 +46,8 @@ add_subdirectory(litedram)
 add_subdirectory(ibex_wb_core)
 add_subdirectory(ibex)
 add_subdirectory(reset_ctrl)
+add_subdirectory(praxos)
+
 
 
 
