--- a/gw/components/praxos/CMakeLists.txt
+++ b/gw/components/praxos/CMakeLists.txt
@@ -3,3 +3,13 @@ gw_component_rules(
     TOP_MODULE  praxos_top
     COMPONENT_NAME praxos 
 )
+
+add_test(NAME praxos_ctrl_test
+    COMMAND ${PROJECT_SOURCE_DIR}/scripts/cocotb_test.sh ${CMAKE_CURRENT_LIST_DIR}/test/praxos_ctrl_test.py
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+)
+
+add_test(NAME av2wb_test
+    COMMAND ${PROJECT_SOURCE_DIR}/scripts/cocotb_test.sh ${CMAKE_CURRENT_LIST_DIR}/test/av2wb_test.py
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+)
