--- a/gw/components/praxos/CMakeLists.txt
+++ b/gw/components/praxos/CMakeLists.txt
@@ -13,3 +13,8 @@ add_test(NAME av2wb_test
     COMMAND ${PROJECT_SOURCE_DIR}/scripts/cocotb_test.sh ${CMAKE_CURRENT_LIST_DIR}/test/av2wb_test.py
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 )
+
+add_test(NAME wordcopy_test
+    COMMAND ${CMAKE_CURRENT_LIST_DIR}/test/praxos_wordcopy_test.sh ${PROJECT_SOURCE_DIR}
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+)
