praxos test SoC running on Arty and Verilator

--- a/sw/projects/CMakeLists.txt
+++ b/sw/projects/CMakeLists.txt
@@ -38,3 +38,4 @@ add_subdirectory(sdspi_test)
 add_subdirectory(fatfs_test)
 add_subdirectory(ym2149_test)
 add_subdirectory(stsound_test)
+add_subdirectory(praxos_test)
