--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -322,3 +322,4 @@ add_subdirectory(ym2149_dac_test)
 if (BL_TARGET_FPGA STREQUAL "arty-a7-100")
     add_subdirectory(stsound_test)
 endif()
+add_subdirectory(praxos_test)
