picorv_dma initial check-in

--- a/gw/components/CMakeLists.txt
+++ b/gw/components/CMakeLists.txt
@@ -47,6 +47,7 @@ add_subdirectory(ibex_wb_core)
 add_subdirectory(ibex)
 add_subdirectory(reset_ctrl)
 add_subdirectory(praxos)
+add_subdirectory(picorv_dma)
 
 
 
