picorv build support and unit testing wip

--- a/gw/components/picorv_dma/CMakeLists.txt
+++ b/gw/components/picorv_dma/CMakeLists.txt
@@ -3,3 +3,21 @@ gw_component_rules(
     TOP_MODULE  picorv_dma_top
     COMPONENT_NAME picorv_dma 
 )
+
+add_custom_target(picorv_dma_test
+        WORKING_DIRECTORY
+            ${CMAKE_CURRENT_BINARY_DIR}
+        COMMENT
+            "Dummy target to collect test dependencies."
+        DEPENDS
+            picorv_wr_gp_regs
+            picorv_gp_regs_copy
+            picorv_irq_in_out
+        VERBATIM
+    )
+
+add_test(NAME picorv_dma_cocotb_test
+    COMMAND ${PROJECT_SOURCE_DIR}/scripts/cocotb_test.sh ${CMAKE_CURRENT_LIST_DIR}/test/picorv_dma_test.py
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+)
+
