Add picorv_dma bytecopy and wordcopy tests

--- a/gw/components/picorv_dma/CMakeLists.txt
+++ b/gw/components/picorv_dma/CMakeLists.txt
@@ -13,6 +13,8 @@ add_custom_target(picorv_dma_test
             picorv_wr_gp_regs
             picorv_gp_regs_copy
             picorv_irq_in_out
+            picorv_wordcopy
+            picorv_bytecopy
         VERBATIM
     )
 
