--- a/sw/projects/CMakeLists.txt
+++ b/sw/projects/CMakeLists.txt
@@ -41,3 +41,4 @@ add_subdirectory(fatfs_test)
 add_subdirectory(ym2149_test)
 add_subdirectory(stsound_test)
 add_subdirectory(praxos_test)
+add_subdirectory(picorv_dma_sys_test)
