--- a/sw/components/CMakeLists.txt
+++ b/sw/components/CMakeLists.txt
@@ -2,4 +2,5 @@ add_subdirectory(bootstrap)
 add_subdirectory(fatfs)
 add_subdirectory(stsound)
 add_subdirectory(picorv_dma/test)
+add_subdirectory(picorv_dma)
 
