--- a/sw/components/CMakeLists.txt
+++ b/sw/components/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_subdirectory(bootstrap)
+add_subdirectory(sdram)
+add_subdirectory(vera)
 add_subdirectory(fatfs)
 add_subdirectory(stsound)
 add_subdirectory(picorv_dma/test)
