--- a/sw/projects/picorv_dma_sys_test/CMakeLists.txt
+++ b/sw/projects/picorv_dma_sys_test/CMakeLists.txt
@@ -7,29 +7,18 @@ add_executable(picorv_dma_sys_test
 
 add_dependencies(picorv_dma_sys_test picorv_wordcopy picorv_bytecopy)
 
-target_compile_definitions(picorv_dma_sys_test
-	PRIVATE
-		-DCONFIG_CPU_NOP="nop"
-)
-
 target_compile_options(picorv_dma_sys_test
 	PRIVATE
 		-O2
 )
 
-#Not sure if this is needed.
-target_include_directories(picorv_dma_sys_test
-	PRIVATE
-    	${CMAKE_CURRENT_BINARY_DIR}
-)
-
 target_include_directories(picorv_dma_sys_test
     PRIVATE
-	${CMAKE_BINARY_DIR}/sw/components/picorv_dma/test/
+		${CMAKE_CURRENT_BINARY_DIR}
+		${CMAKE_BINARY_DIR}/sw/components/picorv_dma/test/
 )
 
 #Function defined in parent CMakeLists.txt file:
 link_internal_create_mem_file(picorv_dma_sys_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_internal_mem_64K.ld)
 
-target_link_libraries(picorv_dma_sys_test picorv_dma)
-
+target_link_libraries(picorv_dma_sys_test picorv_dma sdram vera)
