Add comments and pass regression testing.

--- a/gw/components/picorv_dma/CMakeLists.txt
+++ b/gw/components/picorv_dma/CMakeLists.txt
@@ -4,7 +4,10 @@ gw_component_rules(
     COMPONENT_NAME picorv_dma 
 )
 
-add_custom_target(picorv_dma_test
+#This is a dummy target. It doesn't build anything. It just collects the picorv test programs
+#as dependencies for the testcase below. Sadly, add_test() doesn't have a DEPENDS attribute.
+#This means you need to run 'make picorv_dma_test', before running ctest.
+add_custom_target(picorv_dma_test ALL
         WORKING_DIRECTORY
             ${CMAKE_CURRENT_BINARY_DIR}
         COMMENT
@@ -19,6 +22,7 @@ add_custom_target(picorv_dma_test
         VERBATIM
     )
 
+#A CocoTB-based test program.
 add_test(NAME picorv_dma_cocotb_test
     COMMAND ${PROJECT_SOURCE_DIR}/scripts/cocotb_test.sh ${CMAKE_CURRENT_LIST_DIR}/test/picorv_dma_test.py
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
