Add 2nd WBM port to DMA. Rename GP to HIR.

--- a/sw/components/picorv_dma/test/CMakeLists.txt
+++ b/sw/components/picorv_dma/test/CMakeLists.txt
@@ -2,23 +2,38 @@
 #Through the modules in the cmake subdirectory, CMake is aware of the .picoasm extension
 #and the ASM_PICO variables selecting the proper toolchain and compile/link flags.
 
-add_executable(picorv_wr_gp_regs
+add_executable(picorv_wr_hir_regs
 	EXCLUDE_FROM_ALL
-    wr_gp_regs.picoasm
+    wr_hir_regs.picoasm
 )
 
-link_gen_picobin(picorv_wr_gp_regs)
-
-add_executable(picorv_gp_regs_copy
-	EXCLUDE_FROM_ALL
-    gp_regs_copy.picoasm
+target_include_directories(picorv_wr_hir_regs
+    PRIVATE
+        ${CMAKE_CURRENT_LIST_DIR}/..
 )
 
-link_gen_picobin(picorv_gp_regs_copy)
+link_gen_picobin(picorv_wr_hir_regs)
+
+add_executable(picorv_hir_regs_copy
+	EXCLUDE_FROM_ALL
+    hir_regs_copy.picoasm
+)
+
+target_include_directories(picorv_hir_regs_copy
+    PRIVATE
+        ${CMAKE_CURRENT_LIST_DIR}/..
+)
+
+link_gen_picobin(picorv_hir_regs_copy)
 
 add_executable(picorv_irq_in_out
 	EXCLUDE_FROM_ALL
     irq_in_out.picoasm
+)
+
+target_include_directories(picorv_irq_in_out
+    PRIVATE
+        ${CMAKE_CURRENT_LIST_DIR}/..
 )
 
 link_gen_picobin(picorv_irq_in_out)
@@ -28,6 +43,11 @@ add_executable(picorv_wordcopy
     wordcopy.picoasm
 )
 
+target_include_directories(picorv_wordcopy
+    PRIVATE
+        ${CMAKE_CURRENT_LIST_DIR}/..
+)
+
 link_gen_picobin(picorv_wordcopy)
 
 add_executable(picorv_bytecopy
@@ -35,11 +55,21 @@ add_executable(picorv_bytecopy
     bytecopy.picoasm
 )
 
+target_include_directories(picorv_bytecopy
+    PRIVATE
+        ${CMAKE_CURRENT_LIST_DIR}/..
+)
+
 link_gen_picobin(picorv_bytecopy)
 
 add_executable(picorv_progmem_data_access
 	EXCLUDE_FROM_ALL
     progmem_data_access.picoasm
+)
+
+target_include_directories(picorv_progmem_data_access
+    PRIVATE
+        ${CMAKE_CURRENT_LIST_DIR}/..
 )
 
 link_gen_picobin(picorv_progmem_data_access)
