--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ theme:
     name: readthedocs
     collapse_navigation: False
     titles_only: False
-    logo: assets/logo.png
+    logo: assets/boxlambda_logo_simple_white.png
     favicon: images/favicon.png
     features:
     - navigation.tabs
@@ -29,7 +29,7 @@ nav:
         - VERA (Wishbone) Graphics: components_vera.md
         - SDSPI SD Card Controller: components_sdspi.md
         - Dual YM2149 PSG Sound Core: components_dual_ym2149.md
-        - DMA: components_dma.md
+        - DMA Controller: components_dma.md
         - Keyboard and Mouse: components_keyboard_and_mouse.md
         - Serial Port: components_serial.md
         - I2C: components_i2c.md
@@ -39,6 +39,8 @@ nav:
         - PicoLibc: sw_comp_picolibc.md
         - FatFs: sw_comp_fat_fs.md
         - ST-Sound: sw_comp_st_sound.md
+        - YM2149 HAL: sw_comp_ym2149_hal.md
+        - PicoRV DMA HAL: sw_comp_picorv_dma_hal.md
     - Installation and Test Builds:
         - Prerequisites: prerequisites.md
         - Installation: installation.md
@@ -50,3 +52,5 @@ nav:
             - VERA Test: test-build-vera.md
             - SDSPI and FatFS Test: test-build-sdspi-and-fatfs.md
             - YM2149 PSG, Audio DAC, and ST-Sound Test: test-build-ym2149.md
+            - PicoRV DMA Test: test-build-picorv-dma.md
+
