--- a/gw/projects/stsound_test/Bender.yml
+++ b/gw/projects/stsound_test/Bender.yml
@@ -20,6 +20,7 @@ dependencies:
   ym2149: { path: "../../components/ym2149" }
   audio_dac: { path: "../../components/audio_dac" }
   reset_ctrl: { path: "../../components/reset_ctrl" }
+  boxlambda_clk_gen: { path: "../../components/boxlambda_clk_gen" }
 
 sources:
   - target: constraints
