--- a/gw/projects/fatfs_test/Bender.yml
+++ b/gw/projects/fatfs_test/Bender.yml
@@ -15,6 +15,8 @@ dependencies:
   litedram: { path: "../../components/litedram" }
   vera: { path: "../../components/vera" }
   sdspi: { path: "../../components/sdspi" }
+  reset_ctrl: { path: "../../components/reset_ctrl" }
+  boxlambda_clk_gen: { path: "../../components/boxlambda_clk_gen" }
 
 sources:
   - target: constraints
