--- a/gw/projects/vera_integrated/Bender.yml
+++ b/gw/projects/vera_integrated/Bender.yml
@@ -14,6 +14,8 @@ dependencies:
   riscv-dbg: { path: "../../components/riscv-dbg" }
   litedram: { path: "../../components/litedram" }
   vera: { path: "../../components/vera" }
+  reset_ctrl: { path: "../../components/reset_ctrl" }
+  boxlambda_clk_gen: { path: "../../components/boxlambda_clk_gen" }
 
 sources:
   - target: constraints
