--- a/sw/projects/ddr_test/CMakeLists.txt
+++ b/sw/projects/ddr_test/CMakeLists.txt
@@ -12,6 +12,11 @@ else() #fpga:
 	target_compile_definitions(ddr_test PRIVATE -DMEMTEST_SIZE=\(256*1024*1024\))
 endif()
 
+target_compile_options(ddr_test
+	PRIVATE
+		-O2 -g
+)
+
 #Function defined in parent CMakeLists.txt file:
 link_internal_create_mem_file(ddr_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_internal_mem_64K.ld)
 
