dma burst fsm operational

--- a/gw/components/picorv_dma/Bender.yml
+++ b/gw/components/picorv_dma/Bender.yml
@@ -14,6 +14,7 @@ sources:
     - ../../../sub/picorv32/picosoc/picosoc_mem.v
     - ../../../sub/picorv32/picorv32.v
     - rtl/picorv_dma_top.sv
+    - rtl/picorv_burst_fsm.sv
   
 
 
