--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -323,3 +323,4 @@ if (BL_TARGET_FPGA STREQUAL "arty-a7-100")
     add_subdirectory(stsound_test)
 endif()
 add_subdirectory(picorv_dma_sys_test)
+add_subdirectory(picorv_dma_sys_test_ext)
