--- a/sw/projects/CMakeLists.txt
+++ b/sw/projects/CMakeLists.txt
@@ -42,3 +42,4 @@ add_subdirectory(ym2149_test)
 add_subdirectory(stsound_test)
 add_subdirectory(praxos_test)
 add_subdirectory(picorv_dma_sys_test)
+add_subdirectory(picorv_dma_sys_test_ext)
