--- a/sw/projects/CMakeLists.txt
+++ b/sw/projects/CMakeLists.txt
@@ -43,3 +43,4 @@ add_subdirectory(stsound_test)
 add_subdirectory(praxos_test)
 add_subdirectory(picorv_dma_sys_test)
 add_subdirectory(picorv_dma_sys_test_ext)
+add_subdirectory(usb_hid_sys_test)
