--- a/gw/components/CMakeLists.txt
+++ b/gw/components/CMakeLists.txt
@@ -49,6 +49,8 @@ add_subdirectory(reset_ctrl)
 add_subdirectory(praxos)
 add_subdirectory(picorv_dma)
 add_subdirectory(boxlambda_clk_gen)
+add_subdirectory(usb_hid_host)
+
 
 
 
