--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -318,3 +318,4 @@ if (BL_TARGET_FPGA STREQUAL "arty-a7-100")
     add_subdirectory(stsound_test)
 endif()
 add_subdirectory(picorv_dma_sys_test_ext)
+add_subdirectory(dual_port_ram_test)
