--- a/sw/projects/CMakeLists.txt
+++ b/sw/projects/CMakeLists.txt
@@ -40,3 +40,4 @@ add_subdirectory(fatfs_test)
 add_subdirectory(ym2149_test)
 add_subdirectory(stsound_test)
 add_subdirectory(picorv_dma_sys_test_ext)
+add_subdirectory(dual_port_ram_test)
