--- a/gw/components/ibex_wb_core/CMakeLists.txt
+++ b/gw/components/ibex_wb_core/CMakeLists.txt
@@ -1,5 +1,5 @@
 #gw_component_rules() function is defined in the parent CMakeLists.txt.
 gw_component_rules(
-    TOP_MODULE ibex_wb_core_wrapper 
+    TOP_MODULE ibex_wb_core_ooc
     COMPONENT_NAME ibex_wb_core 
 )
