--- a/gw/components/ibex_wb_core/Bender.yml
+++ b/gw/components/ibex_wb_core/Bender.yml
@@ -21,5 +21,5 @@ sources:
       - ../../../sub/ibex_wb/rtl/slave2wb.sv 
   - target: ibex_wb_core
     files:
-      - rtl/ibex_wb_core_wrapper.sv    
+      - rtl/ibex_wb_core_ooc.sv    
     
