USB simulation operational

--- a/gw/components/CMakeLists.txt
+++ b/gw/components/CMakeLists.txt
@@ -53,6 +53,10 @@ add_subdirectory(wb_dp_ram)
 add_subdirectory(boxlambda_soc)
 add_subdirectory(blackbox)
 add_subdirectory(usb_hid_host)
+add_subdirectory(usb_hid_device)
+add_subdirectory(async_fifo)
+
+
 
 
 
