--- a/.gitmodules
+++ b/.gitmodules
@@ -60,3 +60,9 @@
 [submodule "sub/usb_hid_host"]
 	path = sub/usb_hid_host
 	url = https://github.com/epsilon537/usb_hid_host
+[submodule "sub/USB"]
+	path = sub/USB
+	url = https://github.com/epsilon537/USB
+[submodule "sub/async_fifo"]
+	path = sub/async_fifo
+	url = https://github.com/epsilon537/async_fifo
