--- a/gw/projects/usb_hid_sys_test/Bender.yml
+++ b/gw/projects/usb_hid_sys_test/Bender.yml
@@ -3,11 +3,12 @@
 # Package metadata. Required.
 package:
   # The name of the package. Required.
-  name: picorv_sys_test_ext
+  name: usb_hid_sys_test
 
 dependencies:
   # Path dependency.
   boxlambda_soc: { path: "../../components/boxlambda_soc" }
+  usb_hid_device: { path: "../../components/usb_hid_device" }
   
 sources:
   - target: constraints
@@ -19,11 +20,11 @@ sources:
       DPRAM_SIZE_BYTES: 65536
       NO_MODPORT_EXPRESSIONS: ~
       DEBUG_MODULE_ACTIVE: ~
-      YM2149: ~
-      SDSPI: ~
+      #YM2149: ~
+      #SDSPI: ~
       DRAM: ~
-      VERA: ~
-      PICORV_DMA: ~
+      #VERA: ~
+      #PICORV_DMA: ~
       USB_HID:  ~
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
@@ -34,11 +35,11 @@ sources:
       DPRAM_SIZE_BYTES: 262144
       NO_MODPORT_EXPRESSIONS: ~
       DEBUG_MODULE_ACTIVE: ~
-      YM2149: ~
-      SDSPI: ~
-      DRAM: ~
-      VERA: ~
-      PICORV_DMA: ~
+      #YM2149: ~
+      #SDSPI: ~
+      #DRAM: ~
+      #VERA: ~
+      #PICORV_DMA: ~
       USB_HID: ~
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
@@ -46,7 +47,7 @@ sources:
   - target: verilator
     files:
       - sim/sim_main.cpp
-      - ../top/sim/sim_main.sv
-      - ../top/lint.vlt
+      - sim/sim_main.sv
+      - lint.vlt
             
 
