Some test code clean-up.

--- a/sw/components/CMakeLists.txt
+++ b/sw/components/CMakeLists.txt
@@ -5,4 +5,5 @@ add_subdirectory(fatfs)
 add_subdirectory(stsound)
 add_subdirectory(picorv_dma/test)
 add_subdirectory(picorv_dma)
+add_subdirectory(usb_hid)
 
