--- a/gw/components/CMakeLists.txt
+++ b/gw/components/CMakeLists.txt
@@ -54,6 +54,7 @@ add_subdirectory(boxlambda_soc)
 add_subdirectory(blackbox)
 add_subdirectory(usb_hid_host)
 add_subdirectory(usb_hid_device)
+add_subdirectory(cdc_cells)
 
 
 
