--- a/gw/components/cdc_cells/Bender.yml
+++ b/gw/components/cdc_cells/Bender.yml
@@ -3,15 +3,21 @@
 # Package metadata. Required.
 package:
   # The name of the package. Required.
-  name: reset_ctrl
-
-dependencies:
-  # Path dependency.
-  cdc_cells: { path: "../cdc_cells" }
-
+  name: cdc_cells
+  
 sources:
+  - target: verilator
+    files:
+     - lint.vlt
   - target: any(verilator, vivado)
     files:
-    - rtl/reset_ctrl.sv
-    - rtl/button_conditioner.sv
+     - rtl/pls2tgl.sv
+     - rtl/sync3.sv
+     - rtl/tgl2pls.sv
+     - rtl/syncpls.sv
+
+
+
+
+
 
