--- a/gw/components/usb_hid_host/CMakeLists.txt
+++ b/gw/components/usb_hid_host/CMakeLists.txt
@@ -1,5 +1,5 @@
 #gw_component_rules() function is defined in the parent CMakeLists.txt.
 gw_component_rules(
-    TOP_MODULE  wb_usb_hid_host
+    TOP_MODULE  usb_hid_host_top
     COMPONENT_NAME usb_hid_host
 )
