--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,7 +41,7 @@ nav:
         - SDSPI SD Card Controller: components_sdspi.md
         - Dual YM2149 PSG Sound Core: components_dual_ym2149.md
         - PicoRV DMA Controller: components_picorv_dma.md
-        - Keyboard and Mouse: components_keyboard_and_mouse.md
+        - USB HID Keyboard and Mouse: components_usb_hid.md
         - Serial Port: components_serial.md
         - I2C: components_i2c.md
         - Miscellaneous: components_misc.md
@@ -52,6 +52,7 @@ nav:
         - ST-Sound: sw_comp_st_sound.md
         - YM2149 HAL: sw_comp_ym2149_hal.md
         - PicoRV DMA HAL: sw_comp_picorv_dma_hal.md
+        - USB HID: sw_comp_usb_hid.md
     - Installation:
         - Prerequisites: prerequisites.md
         - Peripherals (PMODs): pmods.md
@@ -64,5 +65,6 @@ nav:
         - YM2149 PSG, Audio DAC, and ST-Sound Test: test-build-ym2149.md
         - PicoRV DMA Test: test-build-picorv-dma.md
         - Dual Port RAM Test: test-build-dpram.md
+        - USB HID Keyboard and Mouse Test: test-build-usb-hid.md
 
 
